...
            top: 16,
            left: 0,
            right: 0,
            child: Center(
              child: SemanticHelper.container(
                testId: 'barcode_sec_scan_guide',
                label: 'バーコードを枠内に合わせてください',
                child: Container(
                  padding:
                      const EdgeInsets.symmetric(horizontal: 16, vertical: 8),
                  decoration: BoxDecoration(
                    color: Colors.black54,
                    borderRadius: BorderRadius.circular(20),
...
